# prowler-json-to-pdf-api

./: .env.exemple  .eslintrc.cjs  .gitignore  README.md  cdk.json  package.json  prowler-json-to-pdf-converter-tool-executable-project
lambda-docker/: Dockerfile
lambda-docker/code/: index.js  index.ts
lambda-docker/prowler-json-to-pdf-converter-tool-executable-project/: .gitignore  CMakeLists.txt  convert_stdin_to_pdf.sh
lambda-docker/prowler-json-to-pdf-converter-tool-executable-project/src/: main.cpp
lib/: api-construct.ts  cdk-stack.ts
tests/: basic-app-works.test.ts
